[package]
name = "ycnbts"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.23", features = ["derive"] }
uuid = { version = "1.11.0", features = ["fast-rng", "serde", "v4"] }
rsa = { version = "0.9.7", features = ["serde"] }
aes-gcm = "0.10.3"
rand = "0.8.5"
zeroize = "1.8.1"
bincode = "1.3.3"
inquire = "0.7.5"